Fix z-index social links

--- a/source/assets/stylesheets/components/_social-links.scss
+++ b/source/assets/stylesheets/components/_social-links.scss
@@ -4,6 +4,7 @@
   padding: 2em 0;
   position: relative;
   text-align: center;
+  z-index: 1;
 
   @include grid-media($for-desktop-up) {
     background-color: transparent;
